# haunt

./: .gitignore  CLAUDE.md  Heckatron-on-E2E-Testing.txt  INSTALL.md  PITCH.md  README.md  Super-Cleanup-And-Install-Script.txt
.github/ISSUE_TEMPLATE/: config.yml
.haunt/: .gitignore
.haunt/docs/: lessons-learned.md
.haunt/pattern-hunter/: patterns-20251210-153130.json  signals-20251210-153130.json  state.json  temp_patterns.json
.haunt/plans/: roadmap.md
.haunt/scripts/: archive-completed.py  evening-handoff.sh  haunt_secrets.py  morning-review.sh  pre-commit-e2e-check.sh  weekly-refactor.sh
.knowledge_archive/AgenticSDLC - Multiverse Curriculum/: 0. README.md  1. Agentic-SDLC-Syllabus.md  2. Class Recording_Analysis.md  3. Handling-A-Project-Driven-Manic-Episode.md  4. The-Long-Game-Operating-Agent-Teams.md
.knowledge_archive/Agentic_SDLC_Framework/: 00-Overview.md  01-Prerequisites.md  02-Infrastructure.md  03-Agent-Definitions.md  04-Implementation-Phases.md  05-Operations.md  06-Patterns-and-Defeats.md  AGENT-TOOLS-GUIDE.md  issues.md  requirements-agentic.txt
Familiar/: productivity-app-pitch.md
Grimoire/: Claude-Code-Memory-Layers.md
Haunt/: .haunt-version  QUICK-REFERENCE.md  README.md  SETUP-GUIDE.md  manifest.yaml
Haunt/secrets/: .env.template  README.md  pyproject.toml
Haunt/secrets/docs/: MIGRATION.md
Haunt/secrets/haunt_secrets/: __init__.py  loader.py  parser.py  redaction.py
Haunt/secrets/tests/: test_bash_wrapper.sh  test_e2e.py  test_loader.py  test_parser.py  test_redaction.py
Skills/: CONTRIBUTING.md
(+277 files in other folders)
